BUG - card overflow fixed

--- a/src/pages/resume.scss
+++ b/src/pages/resume.scss
@@ -360,9 +360,6 @@ span .text {
 	font-weight: 500;
 }
 
-.card-container .border .card .content:first-child {
-	margin-bottom: auto;
-}
 .card-container .border .card .content p {
 	font-size: 1em;
 	font-weight: 300;
